<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">货主APP</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="find_password">找回密码</string>
    <string name="register">注册新用户</string>
    <string name="back">返回</string>
	<string name="shipper_register">货主注册</string>
	<string name="shipper_verify">货主认证</string>
	<string name="order_detail">订单详情</string>
	<string name="confirm_password">确认密码</string>
	<string name="get_verifycaode">获取验证码</string>
	<string name="agree_protocol">我已同意协议声明</string>
	<string name="register_string">注册</string>
	<string name="thanks">感谢您对我们的支持，祝您使用愉快</string>
	<string name="information">个人信息</string>
	<string name="enterprise">企业信息</string>
	<string name="name">姓名</string>
	<string name="id_number">身份证号</string>
	<string name="tel_number">手机号码</string>
	<string name="id_photo">身份证照片</string>
	<string name="portrait_photo">头像照片</string>
	<string name="next">下一步</string>
	<string name="done">完成</string>
	<string name="enterprise_name">企业名称</string>
	<string name="enterprise_address">企业地址</string>
	<string name="enterprise_idnumber">营业执照号</string>
	<string name="enterprise_idphoto">营业执照照片</string>
	<string name="enterprise_type">货物种类</string>
	<string name="action">货单管理</string>
	<string name="personal_center">个人中心</string>
	<string name="fahuo">发货</string>
	<string name="order">订单</string>
	<string name="message">消息</string>
	<string name="center">个人中心</string>
	<string name="enterprise_information">企业信息</string>
	<string name="verify_status">未认证</string>
	<string name="calc">我的积分</string>
	<string name="check_new">检查新版本</string>
	<string name="about_us">关于我们</string>
	<string name="faq">常见问题</string>
	<string name="privilege">我的账单</string>
	<string name="evaluate">待评价</string>
	<string name="balance">待结算</string>
	<string name="transport">运输中</string>
	<string name="confirm">待确认</string>
	<string name="dispatch">待派车</string>
	<string name="all">全部</string>
	<string name="fahuo_information">发货信息</string>
	<string name="carriage">承运信息</string>
	<string name="transport_information">运输信息</string>
	<string name="get_information">收货信息</string>
	<string name="billing_information">结算信息</string>
	<string name="evaluate_information">评价信息</string>
	<string name="aboutus">关于我们</string>
	<string name="bill">我的账单</string>
	<string name="score">我的积分</string>
	<string name="total_score">总积分</string>
	<string name="total_pay">总支付</string>
	<string name="version">软件版本</string>
	<string name="current_version">当前软件版本</string>
	<string name="soft_info">软件基本信息\nxxxxxxxx</string>
	<string name="check_new_version">检查新版本</string>
	<string name="availble_version">无可更新版本</string>
	<string name="update">版本更新</string>
	<string name="zcfh">整车发货</string>
	<string name="ldfh">零单发货</string>
	<string name="spend_time">用车时间</string>
	<string name="contract">发货联系方式</string>
	<string name="load_location">装货地</string>
	<string name="unload_location">卸货地</string>
	<string name="receiver_contract">收货联系方式</string>
	<string name="typeofcar">车型车长</string>
	<string name="goods_desc">货物描述</string>
	<string name="trade_pattern">交易模式</string>
	<string name="transport_price">运费价格</string>
	<string name="confirm_submit">确认发布</string>
	<string name="trans_line">过渡线</string>
	<string name="add">加号</string>
	
</resources>
