<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/main_navigator_text_blue" >

        <TextView
            android:id="@+id/back"
            style="@style/back"
            android:text="@string/back" />

        <TextView
            style="@style/title"
            android:text="@string/order_detail" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/taskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/onfahuo"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/onfahuo"
                style="@style/order_detail_navi_style"
                android:text="@string/fahuo_information" />

            <RadioButton
                android:id="@+id/onCarriage"
                style="@style/order_detail_navi_style"
                android:text="@string/carriage" />

            <RadioButton
                android:id="@+id/onTransport"
                style="@style/order_detail_navi_style"
                android:text="@string/transport_information" />

            <RadioButton
                android:id="@+id/onGet"
                style="@style/order_detail_navi_style"
                android:text="@string/get_information" />

            <RadioButton
                android:id="@+id/onBilling"
                style="@style/order_detail_navi_style"
                android:text="@string/billing_information" />

            <RadioButton
                android:id="@+id/onEvaluate"
                style="@style/order_detail_navi_style"
                android:text="@string/evaluate_information" />
        </RadioGroup>

        <cn.qm.widget.MyViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </cn.qm.widget.MyViewPager>
    </LinearLayout>

</LinearLayout>