<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/main_navigator_text_blue" >

        <TextView
            android:id="@+id/back"
            style="@style/back"
            android:text="@string/back" />

        <TextView
            style="@style/title"
            android:text="@string/aboutus" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_ten"
        android:text="@string/version"
        android:textSize="@dimen/font_size" />

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/soft_info"/>
</LinearLayout>