<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/main_navigator_text_blue" >

        <TextView
            android:id="@+id/back"
            style="@style/back"
            android:text="@string/back" />

        <TextView
            style="@style/title"
            android:text="@string/shipper_register" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_login_margin"
        android:layout_marginRight="@dimen/activity_login_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_ten"
            android:orientation="horizontal"
            android:weightSum="10" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/user_name" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <cn.qm.widget.MyEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_ten"
            android:orientation="horizontal"
            android:weightSum="10" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/password" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <cn.qm.widget.MyEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_ten"
            android:orientation="horizontal"
            android:weightSum="10" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.5"
                android:text="@string/confirm_password" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".5" />

            <cn.qm.widget.MyEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10" >

            <cn.qm.widget.MyEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="4"
                android:background="@drawable/button"
                android:text="@string/get_verifycaode"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/agree_protocol" />
        </LinearLayout>

        <Button
            style="@style/mybutton"
            android:layout_width="match_parent"
            android:text="@string/register_string" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks" />
    </LinearLayout>

</RelativeLayout>